# Pulsar

./: .dockerignore  .gitignore  Dockerfile  Makefile  PULSAR.kicad_prl  PULSAR.kicad_pro  PULSAR.kicad_sch  README.md  docker-compose.arm64.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: backend-toolchain.yml  rust.yml
docs/: README.md  advanced_validation.md  architecture.md  backend.md  firmware_guide.md  validator_quickstart.md
docs/backend_llvm/: LX32BackendTechnical.md
docs/golden_model/arch/: lx32_alu_pkg.md  lx32_arch_pkg.md  lx32_branch_pkg.md  lx32_decode_pkg.md  lx32_isa_pkg.md  mod.md
docs/golden_model/core/: alu.md  branch_unit.md  control_unit.md  imm_gen.md  lsu.md  lx32_system.md  mod.md  (+3 more)
docs/lx32k/: a3_custom_coverage.md  a4_backend_custom_isa_validation.md  a5_mmio_decode_coverage.md  custom_isa.md
docs/tools/: build.md  demo.md  lx32_optimized_c.md  setup.md  validator_make_usage.md
gerbers/: PULSAR-B_Mask.gbr  PULSAR-B_Paste.gbr  PULSAR-F_Mask.gbr  PULSAR-In1_Cu.gbr  PULSAR-PTH.drl
hardware/: PULSAR.kicad_pcb  PULSAR.kicad_pro  PULSAR.kicad_sch
prueba/: prueba.kicad_prl  prueba.kicad_pro  prueba.kicad_sch
prueba/PULSAR/: PULSAR.csv  PULSAR.kicad_pcb  PULSAR.kicad_prl  PULSAR.kicad_pro  PULSAR.kicad_sch  ~PULSAR.kicad_sch.lck
rtl/arch/: lx32_isa_pkg.sv  lx32_mmio_pkg.sv
rtl/core/: control_unit.sv  dma_controller.sv  lx32_system.sv  register_file.sv  sensor_controller.sv
tb/core/: lx32_chord_tb.sv  lx32_mmio_decode_tb.sv  lx32_report_tb.sv  lx32_sensor_tb.sv  lx32_wait_tb.sv
tools/: bench_summary.py  lx32-unknown-none-elf.json
tools/lx32_backend/: CMakeLists.txt
tools/lx32_validator/: Cargo.toml  demo.sh
tools/pulsar_pac/: Cargo.toml
tools/pulsar_pac/.cargo/: config.toml
tools/pulsar_pac/examples/: keyboard.rs
tools/pulsar_pac/src/: dma.rs  lib.rs  raw.rs  runtime.rs  sensor.rs  timing.rs
(+111 files in other folders)
